@@ -84,7 +84,7 @@ timeout.
 .SS Work mode
 .HnE
 .PP 
-Without specifying work mode the program takes 1 picture.
+Without specifying work mode the program prints out the status info.
 .PP
 \fB\-F\fR, \fB\-\-frames \fR\fB\fINUMBER\fR
 .RS 4
@@ -261,8 +261,7 @@ Specify flash exposure compensation value.
 \fB\-o\fR,\fB\-\-output_file\fR \fIFILENAME\fR
 .RS 4
 Specify the name of the output file prefix. Frame number and
-extension will be automatically added. If not specified the file will
-be sent to standard output\.
+extension will be automatically added. Use '-' to output to stdout\.
 .RE
 .PP
 \fB\-\-file_format\fR \fIFORMAT\fR
